# ANTIFRAUDE

./: .dockerignore  .gitignore  ANTIFRAUD_COLAB_COMPLETE.ipynb  Dockerfile  README.md  architecture_technique.md  colab_notebook.ipynb  create_sample_dataset.py  docker-compose.yml  download_dataset.py  exploration_analysis.ipynb  load_and_analyze_dataset.py  planning_et_metriques.md  pyproject.toml  requirements.txt  test_api.py  test_connectivity_permissions.py  test_dataset_exploration.py  verify_environment.py
dashboards/: .gitkeep  fraud_dashboard.py  projet1_dashboard.py  ultra_modern_dashboard.py
data/: .gitkeep
docker/: .gitkeep
monitoring/: prometheus.yml
notebooks/: pyspark_optimization.ipynb
src/api/: .gitkeep  dashboard.html  main.py
src/cache/: redis_features.py
src/data_processing/: .gitkeep  etl_pipeline.py
src/features/: .gitkeep  feature_selection.py  feature_store.py
src/ml/: .gitkeep  advanced_ml.py  mllib_pipeline.py  model_selection.py  model_serving.py
src/monitoring/: system_monitoring.py
src/streaming/: .gitkeep  kafka_streaming.py
src/utils/: .gitkeep
src/validation/: data_quality.py  monitoring_drift.py
tests/: locustfile.py  performance_validation.py  test_e2e.py  test_etl_pipeline.py  test_ml_performance.py
