[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "antifraud-detection"
version = "0.1.0"
description = "Real-time fraud detection system using PySpark and ML"
authors = [
    {name = "EL AZDI YASSINE", email = "yassine.elazdi@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pyspark>=3.4.1",
    "pandas>=2.2.0",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.6",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.1",
    "mlflow>=2.7.1",
    "streamlit>=1.28.1",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/ELAZDIYASSINE/ANTIFRAUDE"
Repository = "https://github.com/ELAZDIYASSINE/ANTIFRAUDE"
Issues = "https://github.com/ELAZDIYASSINE/ANTIFRAUDE/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]
